@@ -1,3 +1,8 @@
+2009-02-18  Thorsten Kukuk  <kukuk@thkukuk.de>
+
+	* libpam/pam_password.c (pam_chauthtok): Make sure applications
+	don't set internal flags.
+
 2009-02-17  Thorsten Kukuk  <kukuk@thkukuk.de>
 
 	* doc/man/pam_sm_chauthtok.3.xml: Document that sufficient
